# PCS_2026

./: new_textfile.txt
Progetto_PCS/: CMakeLists.txt  functions.cpp  problemi.txt  progetto.cpp  progetto.h
esercitazione10/: CMakeLists.txt  ese10.cpp  ese10.h  gradiente_Vicini.cpp
esercitazione2/: README.md
esercitazione3/: CMakeLists.txt  ese3.cpp  ese3.h  ese3_func.cpp
esercitazione4/: CMakeLists.txt  ese4.cpp  ese4.h  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  Osservazioni.txt  ese5.cpp  ese5.h  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione8/: CMakeLists.txt  ese8.cpp  ese8.h
esercitazione9/: CMakeLists.txt  ese8_w.h  ese9.cpp  ese9.h
